embedScriptParser/y.output

state 0
	$accept: .program $end 
	stmt_block: .    (2)

	.  reduce 2 (src line 47)

	program  goto 1
	stmt_block  goto 2

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  stmt_block.    (1)
	stmt_block:  stmt_block.statement 

	IF  shift 6
	IDENTIFIER  shift 8
	.  reduce 1 (src line 44)

	var  goto 7
	statement  goto 3
	if_stmt  goto 4
	assign_stmt  goto 5

state 3
	stmt_block:  stmt_block statement.    (3)

	.  reduce 3 (src line 49)


state 4
	statement:  if_stmt.    (4)
	statement:  if_stmt.SP 

	SP  shift 9
	.  reduce 4 (src line 52)


state 5
	statement:  assign_stmt.    (6)
	statement:  assign_stmt.SP 

	SP  shift 10
	.  reduce 6 (src line 55)


state 6
	if_stmt:  IF.condition THEN stmt_block ELSE stmt_block FI 
	if_stmt:  IF.condition THEN stmt_block FI 

	NOT  shift 14
	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 16
	.  error

	var  goto 17
	expr  goto 15
	condition  goto 11
	rel_condition  goto 12
	sub_condition  goto 13

state 7
	assign_stmt:  var.'=' expr 

	'='  shift 20
	.  error


state 8
	var:  IDENTIFIER.    (20)

	.  reduce 20 (src line 89)


state 9
	statement:  if_stmt SP.    (5)

	.  reduce 5 (src line 54)


state 10
	statement:  assign_stmt SP.    (7)

	.  reduce 7 (src line 56)


state 11
	if_stmt:  IF condition.THEN stmt_block ELSE stmt_block FI 
	if_stmt:  IF condition.THEN stmt_block FI 

	THEN  shift 21
	.  error


state 12
	condition:  rel_condition.    (11)
	sub_condition:  rel_condition.    (18)

	AND  reduce 18 (src line 83)
	OR  reduce 18 (src line 83)
	.  reduce 11 (src line 70)


state 13
	condition:  sub_condition.AND sub_condition 
	condition:  sub_condition.OR sub_condition 

	AND  shift 22
	OR  shift 23
	.  error


state 14
	condition:  NOT.sub_condition 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 16
	.  error

	var  goto 17
	expr  goto 15
	rel_condition  goto 25
	sub_condition  goto 24

state 15
	rel_condition:  expr.EQ expr 
	rel_condition:  expr.'<' expr 
	rel_condition:  expr.'>' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	EQ  shift 26
	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	'<'  shift 27
	'>'  shift 28
	.  error


state 16
	sub_condition:  '('.condition ')' 
	expr:  '('.expr ')' 

	NOT  shift 14
	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 16
	.  error

	var  goto 17
	expr  goto 34
	condition  goto 33
	rel_condition  goto 12
	sub_condition  goto 13

state 17
	expr:  var.    (21)

	.  reduce 21 (src line 93)


state 18
	expr:  NUMBER.    (22)

	.  reduce 22 (src line 94)


state 19
	expr:  STRING.    (23)

	.  reduce 23 (src line 95)


state 20
	assign_stmt:  var '='.expr 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 36
	.  error

	var  goto 17
	expr  goto 35

state 21
	if_stmt:  IF condition THEN.stmt_block ELSE stmt_block FI 
	if_stmt:  IF condition THEN.stmt_block FI 
	stmt_block: .    (2)

	.  reduce 2 (src line 47)

	stmt_block  goto 37

state 22
	condition:  sub_condition AND.sub_condition 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 16
	.  error

	var  goto 17
	expr  goto 15
	rel_condition  goto 25
	sub_condition  goto 38

state 23
	condition:  sub_condition OR.sub_condition 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 16
	.  error

	var  goto 17
	expr  goto 15
	rel_condition  goto 25
	sub_condition  goto 39

state 24
	condition:  NOT sub_condition.    (14)

	.  reduce 14 (src line 74)


state 25
	sub_condition:  rel_condition.    (18)

	.  reduce 18 (src line 83)


state 26
	rel_condition:  expr EQ.expr 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 36
	.  error

	var  goto 17
	expr  goto 40

state 27
	rel_condition:  expr '<'.expr 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 36
	.  error

	var  goto 17
	expr  goto 41

state 28
	rel_condition:  expr '>'.expr 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 36
	.  error

	var  goto 17
	expr  goto 42

state 29
	expr:  expr '+'.expr 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 36
	.  error

	var  goto 17
	expr  goto 43

state 30
	expr:  expr '-'.expr 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 36
	.  error

	var  goto 17
	expr  goto 44

state 31
	expr:  expr '*'.expr 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 36
	.  error

	var  goto 17
	expr  goto 45

state 32
	expr:  expr '/'.expr 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 36
	.  error

	var  goto 17
	expr  goto 46

state 33
	sub_condition:  '(' condition.')' 

	')'  shift 47
	.  error


state 34
	rel_condition:  expr.EQ expr 
	rel_condition:  expr.'<' expr 
	rel_condition:  expr.'>' expr 
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	EQ  shift 26
	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	'<'  shift 27
	'>'  shift 28
	')'  shift 48
	.  error


state 35
	assign_stmt:  var '=' expr.    (10)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 10 (src line 65)


state 36
	expr:  '('.expr ')' 

	NUMBER  shift 18
	IDENTIFIER  shift 8
	STRING  shift 19
	'('  shift 36
	.  error

	var  goto 17
	expr  goto 49

state 37
	stmt_block:  stmt_block.statement 
	if_stmt:  IF condition THEN stmt_block.ELSE stmt_block FI 
	if_stmt:  IF condition THEN stmt_block.FI 

	IF  shift 6
	ELSE  shift 50
	FI  shift 51
	IDENTIFIER  shift 8
	.  error

	var  goto 7
	statement  goto 3
	if_stmt  goto 4
	assign_stmt  goto 5

state 38
	condition:  sub_condition AND sub_condition.    (12)

	.  reduce 12 (src line 72)


state 39
	condition:  sub_condition OR sub_condition.    (13)

	.  reduce 13 (src line 73)


state 40
	rel_condition:  expr EQ expr.    (15)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 15 (src line 77)


state 41
	rel_condition:  expr '<' expr.    (16)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 16 (src line 79)


state 42
	rel_condition:  expr '>' expr.    (17)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	.  reduce 17 (src line 80)


state 43
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (25)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'*'  shift 31
	'/'  shift 32
	.  reduce 25 (src line 97)


state 44
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (26)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'*'  shift 31
	'/'  shift 32
	.  reduce 26 (src line 98)


state 45
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (27)
	expr:  expr.'/' expr 

	.  reduce 27 (src line 99)


state 46
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (28)

	.  reduce 28 (src line 100)


state 47
	sub_condition:  '(' condition ')'.    (19)

	.  reduce 19 (src line 85)


state 48
	expr:  '(' expr ')'.    (24)

	.  reduce 24 (src line 96)


state 49
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 

	'+'  shift 29
	'-'  shift 30
	'*'  shift 31
	'/'  shift 32
	')'  shift 48
	.  error


state 50
	if_stmt:  IF condition THEN stmt_block ELSE.stmt_block FI 
	stmt_block: .    (2)

	.  reduce 2 (src line 47)

	stmt_block  goto 52

state 51
	if_stmt:  IF condition THEN stmt_block FI.    (9)

	.  reduce 9 (src line 62)


state 52
	stmt_block:  stmt_block.statement 
	if_stmt:  IF condition THEN stmt_block ELSE stmt_block.FI 

	IF  shift 6
	FI  shift 53
	IDENTIFIER  shift 8
	.  error

	var  goto 7
	statement  goto 3
	if_stmt  goto 4
	assign_stmt  goto 5

state 53
	if_stmt:  IF condition THEN stmt_block ELSE stmt_block FI.    (8)

	.  reduce 8 (src line 60)


24 terminals, 11 nonterminals
29 grammar rules, 54/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
60 working sets used
memory: parser 50/120000
64 extra closures
114 shift entries, 3 exceptions
31 goto entries
25 entries saved by goto default
Optimizer space used: output 88/120000
88 table entries, 2 zero
maximum spread: 24, maximum offset: 52
